# RWAI_Server

./: .gitattributes  .gitignore  Bootstrap.py  README.md  babel.cfg  loader.py  pdm_build.py  pyproject.toml
locales/ar/LC_MESSAGES/: messages.po
locales/cs/LC_MESSAGES/: messages.po
locales/da/LC_MESSAGES/: messages.po
locales/de/LC_MESSAGES/: messages.po
locales/en/LC_MESSAGES/: messages.po
locales/es/LC_MESSAGES/: messages.po
locales/es_419/LC_MESSAGES/: messages.po
locales/et/LC_MESSAGES/: messages.po
locales/fi/LC_MESSAGES/: messages.po
locales/fr/LC_MESSAGES/: messages.po
locales/hu/LC_MESSAGES/: messages.po
locales/it/LC_MESSAGES/: messages.po
locales/ja/LC_MESSAGES/: messages.po
locales/ko/LC_MESSAGES/: messages.po
locales/nl/LC_MESSAGES/: messages.po
locales/no/LC_MESSAGES/: messages.po
locales/pl/LC_MESSAGES/: messages.po
locales/pt/LC_MESSAGES/: messages.po
locales/pt_BR/LC_MESSAGES/: messages.po
locales/ro/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
locales/sk/LC_MESSAGES/: messages.po
locales/sv/LC_MESSAGES/: messages.po
locales/tr/LC_MESSAGES/: messages.po
protos/: description.proto  job.proto  jobqueue.proto
schemas/: json-schema-to-grammar.py  phi3.jinja  quote.gbnf  regex-to-grammar.py  xml_1_0_full.gbnf
src/: Server.py
src/AIServer/: Client.py  Server.py  __init__.py  client.py  health.py  job_grpc.py  job_pb2.py  job_pb2.pyi  templates.py
src/AIServer/job/: job_pb2.py  (+2 more)
tools/: compile_translations.py  convert_translations.py  init_translations.py  openai_translate.py  translate.py
(+6 files in other folders)
