[project]
name = "AIServer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ian Goforth", email = "ian.goforth@gmail.com"},
]
dependencies = [
    "grpclib[protobuf]>=0.4.7",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "grpcio-tools>=1.63.0",
]
