[project]
name = "AIServer"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Ian Goforth", email = "ian.goforth@gmail.com"},
]
dependencies = [
    "grpclib>=0.4.7",
    "OpenAI-Python-Client>=0.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
]
