[project]
name = "AIServer"
version = "0.2.1"
description = "Supporting python scripts for RWAI backend"
authors = [
    {name = "Ian Goforth", email = "ian.goforth@gmail.com"},
]
dependencies = [
    "OpenAI-Python-Client>=0.2.3",
    "babel>=2.15.0",
    "protobuf>=5.27.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "polib>=1.2.0",
]

[tool.pdm.build]
is-purelib = true
package-dir = "src"
includes = ["src"]